bug: footeroverlapp

--- a/TravelPlanner/src/Components/NewDestination/NewDestination.css
+++ b/TravelPlanner/src/Components/NewDestination/NewDestination.css
@@ -1,6 +1,6 @@
 .newDestinationContainer {
   background-color: var(--background);
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
